--- a/index/index.html
+++ b/index/index.html
@@ -1,1 +1,8 @@
-aaa
+<form action ="php.php" method="post">
+ 数字1<input type="text" name="number1" value="">
+ 数字2<input type="text" name="number2" value="">
+ 計算方法
+
+
+</form>
+解答：
