--- a/index/index.html
+++ b/index/index.html
@@ -1,8 +1,21 @@
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>ろくまる農園</title>
+</head>
+<body>
+
 <form action ="php.php" method="post">
- 数字1<input type="text" name="number1" value="">
- 数字2<input type="text" name="number2" value="">
- 計算方法
-
-
-</form>
-解答：
+  数字1<input type="text" name="number1" value="">
+  数字2<input type="text" name="number2" value="">
+  計算方法
+   
+   
+  </form>
+  解答：
+</body>
+</html>
