--- a/index/index.html
+++ b/index/index.html
@@ -10,8 +10,8 @@
 <body>
 
 <form action ="php.php" method="post">
-  数字1<input type="text" name="number1" value="">
-  数字2<input type="text" name="number2" value="">
+  数字1<input type="text" name="number1" value=""><br>
+  数字2<input type="text" name="number2" value=""><br>
   計算方法
    
    
