--- a/index/index.html
+++ b/index/index.html
@@ -14,7 +14,17 @@
   数字2<input type="text" name="number2" value=""><br>
   計算方法
    
-   
+   <select name="calcType">
+     <option value="">
+      ＋
+     </option>
+     <option value="">
+      −
+    </option>
+    <option value="">
+      ×
+    </option>
+   </select>
   </form>
   解答：
 </body>
