--- a/index/index.html
+++ b/index/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <form action ="php.php" method="post">
-  数字1<input type="text" name="number1" value=""><br>
+  数字1<input type="text" name="number1" value="" style="margin-left: 22px;"><br>
   数字2<input type="text" name="number2" value=""><br>
   計算方法
    
