--- a/index/index.html
+++ b/index/index.html
@@ -11,7 +11,7 @@
 
 <form action ="php.php" method="post">
   数字1<input type="text" name="number1" value="" style="margin-left: 22px;"><br>
-  数字2<input type="text" name="number2" value=""><br>
+  数字2<input type="text" name="number2" value="" style="margin-left: 22px;"><br>
   計算方法
    
    <select name="calcType">
