--- a/index/index.html
+++ b/index/index.html
@@ -10,11 +10,11 @@
 <body>
 
 <form action ="php.php" method="post">
-  数字1<input type="text" name="number1" value="" style="margin-left: 22px;"><br>
-  数字2<input type="text" name="number2" value="" style="margin-left: 22px;"><br>
+  数字1<input type="text" name="number1" value="" style="margin-left: 24px;"><br>
+  数字2<input type="text" name="number2" value="" style="margin-left: 24x;"><br>
   計算方法
    
-   <select name="calcType">
+   <select name="calcType" style="width: 152px;">
      <option value="">
       ＋
      </option>
