--- a/index/index.html
+++ b/index/index.html
@@ -14,7 +14,7 @@
   数字2<input type="text" name="number2" value="" style="margin-left: 26px;"><br>
   計算方法
    
-   <select name="calcType" style="width: 152px;">
+   <select name="calcType" style="width: 152px; height: 22px;">
      <option value="">
       ＋
      </option>
