--- a/index/index.html
+++ b/index/index.html
@@ -24,7 +24,8 @@
     <option value="">
       ×
     </option>
-   </select>
+   </select><br>
+   <input type="submit" class ="button" name="action" value="計算する"></button>
   </form>
   解答：
 </body>
