--- a/index/index.html
+++ b/index/index.html
@@ -1,11 +1,13 @@
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
-<title>ろくまる農園</title>
+<title>計算ソフト</title>
+<style>
+  #button {
+    color: aqua;
+  }
+</style>
 </head>
 <body>
 
