--- a/index/index.html
+++ b/index/index.html
@@ -5,7 +5,7 @@
 <title>計算ソフト</title>
 <style>
   .button {
-    color: red; background-color: white;
+    color: blue; background-color: white;
   }
 </style>
 </head>
