--- a/index/index.html
+++ b/index/index.html
@@ -4,6 +4,12 @@
 <meta charset="utf-8">
 <title>計算ソフト</title>
 <style>
+  .num1 {
+    margin-left: 26px;
+  }
+  .num2 {
+    margin-left: 26px;
+  }
   .button {
     color: blue; background-color: white;
   }
@@ -12,8 +18,8 @@
 <body>
 
 <form action ="php.php" method="post">
-  数字1<input type="text" name="number1" value="" style="margin-left: 26px;"><br>
-  数字2<input type="text" name="number2" value="" style="margin-left: 26px;"><br>
+  数字1<input type="text" class="num1" name="number1" value=""><br>
+  数字2<input type="text" class="num2" name="number2" value=""><br>
   計算方法
    
    <select name="calcType" style="width: 152px; height: 22px;">
