--- a/index/index.html
+++ b/index/index.html
@@ -10,6 +10,9 @@
   .num2 {
     margin-left: 26px;
   }
+  .name {
+    width: 152px; height: 22px;
+  }
   .button {
     color: blue; background-color: white;
   }
@@ -22,7 +25,7 @@
   数字2<input type="text" class="num2" name="number2" value=""><br>
   計算方法
    
-   <select name="calcType" style="width: 152px; height: 22px;">
+   <select class="name" name="calcType">
      <option value="">
       ＋
      </option>
