--- a/index/index.html
+++ b/index/index.html
@@ -19,9 +19,9 @@
 </style>
 </head>
 <body>
-
+<div id="contents">
 <form action ="php.php" method="post">
-  数字1<input type="text" class="num1" name="number1" value=""><br>
+  数字1<input type="text" class="num1" name="number1" value="$echo"><br>
   数字2<input type="text" class="num2" name="number2" value=""><br>
   計算方法
    
@@ -38,6 +38,7 @@
    </select><br>
    <input type="submit" class ="button" name="action" value="計算する"></button>
   </form>
-  解答：
+  <p id="answer">解答：</div>
+</div>
 </body>
 </html>
