--- a/index/index.html
+++ b/index/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div id="contents">
-<form action ="calc/index/p" method="post">
+<form action ="" method="post">
   数字1<input type="text" class="num1" name="number1" value=""><br>
   数字2<input type="text" class="num2" name="number2" value=""><br>
   計算方法
