--- a/index/index.html
+++ b/index/index.html
@@ -38,7 +38,10 @@
    </select><br>
    <input type="submit" class ="button" name="action" value="計算する"></button>
   </form>
-  <p id="answer">解答：</div>
+  <p id="answer">解答：[]</p>
+  <textarea>
+    []
+  </textarea>
 </div>
 </body>
 </html>
