--- a/index/index.html
+++ b/index/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div id="contents">
-<form action ="/php/php.php" method="post">
+<form action ="php.php" method="post">
   数字1<input type="text" class="num1" name="number1" value=""><br>
   数字2<input type="text" class="num2" name="number2" value=""><br>
   計算方法
@@ -39,9 +39,9 @@
    </select><br>
    <input type="submit" class ="button" name="result" value="計算する"></button>
   </form>
-  <p id="answer">解答：[]</p>
+  <p id="answer">解答：echo '<input type="text" value="'.$set.'" name="two">'; //足し算の値を表示</p>
   <textarea>
-    []
+    
   </textarea>
 </div>
 </body>
