--- a/calcStudy/index.html
+++ b/calcStudy/index.html
@@ -39,7 +39,7 @@
    </select><br>
    <input type="submit" class ="button" name="result" value="計算する"></button>
   </form>
-  <p id="answer">解答：echo '<input type="text" value="'.$set.'" name="two">'; //足し算の値を表示</p>
+  <p id="answer">解答：</p>
   <textarea>
     
   </textarea>
