--- a/calcStudy/index.html
+++ b/calcStudy/index.html
@@ -27,7 +27,6 @@
    
    <select class="name" name="calcType">
      <option value="plus">
-
       ＋
      </option>
      <option value="minus">
@@ -38,6 +37,7 @@
     </option>
    </select><br>
    <input type="submit" class ="button" name="result" value="計算する"></button>
+   <input type = "reset" value = "クリア">
   </form>
   <p id="answer">解答：</p>
   <textarea>
