--- a/calcStudy/index.html
+++ b/calcStudy/index.html
@@ -27,7 +27,7 @@
   計算方法
    
    <select class="name" name="calcType">
-     <option value="plus">
+     <option value="＋">
       ＋
      </option>
      <option value="minus">
