--- a/calcStudy/index.html
+++ b/calcStudy/index.html
@@ -21,7 +21,7 @@
 <body>
   
 <div id="contents">
-<form action ="" method="post">
+<form action ="php.php" method="post">
   数字1<input type="text" class="num1" name="number1" value=""><br>
   数字2<input type="text" class="num2" name="number2" value=""><br>
   計算方法
