--- a/sample/sample.html
+++ b/sample/sample.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <form action="sample.php" method="post">
-      <input type = "text" name = "text">
+      入力してください:<input type = "text" name = "text">
 
     </form>
   </body>
