--- a/sample/sample.html
+++ b/sample/sample.html
@@ -6,6 +6,7 @@
   <body>
     <form action="sample.php" method="post">
       入力してください:<input type = "text" name = "text">
+      <input type="submit" value="送信">
     </form>
   </body>
 </html>
