--- a/sample/samp.html
+++ b/sample/samp.html
@@ -4,7 +4,7 @@
     <title>sample</title>
   </head>
   <body>
-    <form action="sample.php" method="post">
+    <form action="samp.php" method="post">
       入力してください:<input type = "text" name = "title">
       <input type="submit" value="送信">
     </form>
