--- a/sample/samp.html
+++ b/sample/samp.html
@@ -2,10 +2,13 @@
   <head>
     <meta charset="utf-8">
     <title>sample</title>
+    お問い合わせフォーム
   </head>
   <body>
     <form action="samp.php" method="post">
-      入力してください:<input type = "text" name = "title">
+      性別<input type="radio" value="man" name="gender">男性
+      年齢<input type="text" name="name">
+      ご要望について:<input type = "text" name = "title">
       <input type="submit" value="送信">
     </form>
   </body>
