--- a/sample/samp.html
+++ b/sample/samp.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <form action="samp.php" method="post">
-      性別<input type="radio" value="man" name="gender">男性
-      年齢<input type="text" name="name">
-      ご要望について:<input type = "text" name = "title">
+      性別<input type="radio" value="男性" name="gender">男性<br>
+      年齢<input type="text" name="name"><br>
+      ご要望について:<input type = "text" name = "title"><br>
       <input type="submit" value="送信">
     </form>
   </body>
