--- a/sample/samp.html
+++ b/sample/samp.html
@@ -8,7 +8,7 @@
     <form action="samp.php" method="post">
       性別<input type="radio" value="男性" name="gender">男性<br>
       年齢<input type="text" name="name"><br>
-      ご要望について:<textarea name = "title"><br>
+      ご要望について:<textarea name = "title"></textarea><br>
       <input type="submit" value="送信">
     </form>
   </body>
