--- a/sample/samp.html
+++ b/sample/samp.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <form action="samp.php" method="post">
-      性別<input type="radio" value="男性" name="gender">男性<br>
+      性別<input type="radio" value="男性" name="gender">男性<input type="radio" value="女性" name="gender">女性<br>
       年齢<input type="text" name="name"><br>
       ご要望について<br><textarea name = "title"></textarea>
       <input type="submit" value="送信">
