--- a/sample/samp.html
+++ b/sample/samp.html
@@ -7,7 +7,7 @@
   <body>
     <form action="samp.php" method="post">
       性別<input type="radio" value="男性" name="gender">男性<input type="radio" value="女性" name="gender">女性<br>
-      年齢<input type="text" name="name"><br>
+      年齢<br><input type="text" name="name"><br>
       ご要望について<br><textarea name = "title"></textarea>
       <input type="submit" value="送信">
     </form>
