--- a/sample/samp.html
+++ b/sample/samp.html
@@ -7,8 +7,8 @@
   <body>
     <form action="samp.php" method="post">
       性別<input type="radio" value="男性" name="gender">男性<input type="radio" value="女性" name="gender">女性<br>
-      年齢<br><input type="text" name="name"><br>
-      ご要望について<br><textarea name = "title"></textarea>
+      年齢<br><input type="text" name="name">才<br>
+      ご要望について<br><textarea name = "title"></textarea><br>
       <input type="submit" value="送信">
     </form>
   </body>
