--- a/sample/samp.html
+++ b/sample/samp.html
@@ -7,9 +7,9 @@
   <body>
     <form action="samp.php" method="post">
       性別<input type="radio" value="男性" name="gender">男性<input type="radio" value="女性" name="gender">女性<br>
-      氏名<input type="text" name="name"><br>
+      氏名<br><input type="text" name="name"><br>
       年齢<br><input type="text" name="age">才<br>
-      住所<br><textarea name="address"></textarea>
+      住所<br><textarea name="address"></textarea><br>
       ご要望について<br><textarea name = "title"></textarea><br>
       <input type="submit" value="送信">
     </form>
