--- a/sample/samp.html
+++ b/sample/samp.html
@@ -10,6 +10,10 @@
       氏名<br><input type="text" name="name"><br>
       年齢<br><input type="text" name="age">才<br>
       住所<br><textarea name="address"></textarea><br>
+      <select name="area">
+        <option value="東京">東京</option>
+        <option value="愛知">愛知</option>
+      </select>
       ご要望について<br><textarea name = "title"></textarea><br>
       <input type="submit" value="送信">
     </form>
