--- a/sample/samp.html
+++ b/sample/samp.html
@@ -13,7 +13,7 @@
       <select name="area">
         <option value="東京">東京</option>
         <option value="愛知">愛知</option>
-      </select>
+      </select><br>
       ご要望について<br><textarea name = "title"></textarea><br>
       <input type="submit" value="送信">
     </form>
