--- a/sample/endPage.html
+++ b/sample/endPage.html
@@ -1,1 +1,10 @@
-内容を確認しました！
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>sample</title>
+    お問い合わせフォーム
+  </head>
+  <body>
+    内容を確認しました！
+  </body>
+</html>
