--- a/sample/endPage.html
+++ b/sample/endPage.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>sample</title>
-    お問い合わせフォーム
+    <title>確認完了ページ</title>
   </head>
   <body>
     内容を確認しました！
